# pico-max31855

./: README.md  max31855.cpp  max31855.h
examples/: CMakeLists.txt  example-pico-max31855.cpp
extras/: thermocouple.fzz
